# opengl-play

./: .gitignore  CMakeLists.txt  LICENSE  README.md
assignment3/: readme.html
assignment3/include/: Group.h
assignment3/src/: main.cpp
assignment4/eigen/: linearsolverbase.h  ludecompositionbase.h  matrixh3d.cpp  regression.h  vector.h  vectorbase.h  vectorh3d.cpp
assignment4/include/: Camera.h  Group.h  Root.h  common.h
assignment4/src/: Camera.cpp  main.cpp
assignment5/: readme.html
assignment5/include/: BezierCurve.h  BezierSurface.h
assignment5/src/: BezierCurve.cpp  BezierSurface.cpp  Camera.cpp
bezier/include/: Camera.h
bezier/src/: main.cpp
paint/include/: Canvas.h  DotTool.h  Dots.h  Line.h  LineTool.h  Paint.h  Paintable.h  Rectangle.h  RectangleTool.h  Tool.h  ToolListener.h  structs.h
paint/src/: Canvas.cpp  DotTool.cpp  Dots.cpp  Line.cpp  LineTool.cpp  Paint.cpp  Rectangle.cpp  RectangleTool.cpp  Tool.cpp  main.cpp
scenegraph-camera/: CMakeLists.txt  readme.html
scenegraph-camera/eigen/: linearsolver.h  ludecomposition.h  matrix.h  matrixbase.h  matrixh3d.h  regressionbase.h  util.h  vectorh3d.h
scenegraph-camera/include/: Object.h
scenegraph-camera/src/: main.cpp
scenegraph/include/: Matrix.h  Object.h  Root.h
scenegraph/src/: Matrix.cpp  main.cpp
shapes/: CMakeLists.txt  readme.html
shapes/include/: Cone.h  Cube.h  Matrix.h  Model.h  Sphere.h  Teapot.h  Torus.h  Util.h  enums.h
shapes/src/: Matrix.cpp  Model.cpp  main.cpp
shooting-gallery/: CMakeLists.txt  readme.html
shooting-gallery/include/: Camera.h  Stand.h  Target.h  World.h
shooting-gallery/src/: Camera.cpp  Stand.cpp  Target.cpp  World.cpp  main.cpp
sierpinski/: CMakeLists.txt
sierpinski/src/: sierpinski.c
sparks/: CMakeLists.txt
sparks/src/: sparks.c  sparks.cpp
